# Esplori_dashboard

./: .gitignore  README.md  app.py  dashboard_donos.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: dashboard-builder.agent.md  data-analyst.agent.md  security-reviewer.agent.md
.github/instructions/: explori-dashboard.instructions.md
.github/prompts/: converter-matplotlib-plotly.prompt.md  diagnosticar-erro.prompt.md  executar-tarefa.prompt.md  gerar-insight-kpi.prompt.md  nova-tela-dashboard.prompt.md  plano-para-tarefas.prompt.md  requisito-para-spec.prompt.md  revisar-codigo.prompt.md  spec-para-plano.prompt.md
.github/skills/: data-pipeline.md  dataset-schema.md  insights-estrategicos.md  plotly-patterns.md
.streamlit/: config.toml
data/extracted/: categorias.csv  checkins.csv  estabelecimento_categoria.csv  estabelecimentos.csv  interacoes.csv  promocoes.csv  usuarios.csv
documento projeto/: Relatorio Esplori tecnico .docx  analise_dados_esplori_2025_2026.py
documento projeto/documentos/documentacao_dev/: ARQUITETURA.md  CONSTITUICAO_PROJETO.md  CONTEXTO_DASHBOARD_DONOS.md
documento projeto/documentos/documento_planejamento/: Padrão de aceitação dos graficos .docx
knowledge/docs/documentos/documentacaoProjeto/: AI_USAGE.md  ARQUITETURA.md  CONTEXTO_DASHBOARD_DONOS.md
telas/: benchmarking.py  engajamento.py  perfil_publico.py  promocoes.py  retencao.py  visao_geral.py
utils/: constantes.py  dados.py
views/: benchmarking.py  perfil_publico.py  promocoes.py  retencao.py
